# storefront-change-guard

./: .editorconfig  .env.example  .gitattributes  .gitignore  CHANGELOG.md  HOTFIX_PHASE03_FIX05.md  README.md  pyproject.toml  shipping.py
AUDIT/: FIX-POLICY.md  POLICY-ADDENDUM-01-REVIEW-AND-IMMUTABILITY.md  README.md  change-register.md  phase-00-repository-baseline.md  phase-01-FIX-01-context-boundary-remediation.md  phase-01-FIX-02-monetary-invariant-and-review-governance.md  phase-01-REVIEW-02-final-phase-01-acceptance.md  phase-01-demo-storefront-preparation.md  phase-01-review-01.md  phase-02-FIX-01-intake-decision-contract-and-mixed-goals.md  phase-02-FIX-02-post-review-correction.md  phase-02-REVIEW-02-integrated-intake-and-git-context.md  phase-02A-review-01-intake-gate.md  phase-02B-git-context-collection.md  phase-03-FIX-01-non-interactive-local-completion-runtime.md  phase-03-FIX-02-reference-runtime-and-structured-output.md  phase-03-FIX-03-llama-cli-stdout-sanitization.md  phase-03-FIX-06-structured-output-completion-budget.md  phase-03-FIX-07-runtime-model-identity-and-capability-selection.md  phase-03-FIX-08-explicit-file-scope-priority.md  phase-03-FIX-09-explicit-scope-cache-eligibility.md  phase-03-FIX-10-ascii-spanish-explicit-scope.md  phase-03-grounded-analysis-single-local-model.md  phase-03-validation-01-live-single-model-runtime.md  phase-03-validation-02-corrected-live-runtime.md  phase-04-isolated-patch-validation.md  phase-05-readiness-policy.md  phase-06-ENHANCE-01-spanish-documentation-and-presentation.md  phase-06-delivery-readiness.md  (+2 more)
(+222 files in other folders)
